# kernel-experience-tools

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: publish.yml
src/kernel_experience/: __init__.py  bindings.cpp  convert.py  core.cpp  kernel.py  projection.cpp  projection.py  projections.cpp  solvers.cpp  solvers.py
