[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernel-experience-tools"
version = "0.2.0"
authors = [
    {name = "Artem Vozmishchev", email = "your.email@example.com"}
]
description = "Library for projecting memory kernels to experience functions"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}

dependencies = [
    "numpy",
    "scipy>=1.6.0",
    "matplotlib>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/BRUTALLOLOL/kernel-experience-tools"
