[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "pybind11>=2.6",
    "numpy",
    "scipy>=1.6.0",
    "matplotlib>=3.3.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "kernel-experience-tools"
version = "1.0.2"  # Увеличьте версию!
authors = [
    {name = "Artem Vozmishchev", email = "xbrutallololx@gmail.com"}
]
description = "Library for projecting memory kernels to experience functions"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"

dependencies = [
    "numpy",
    "scipy>=1.6.0",
    "matplotlib>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/BRUTALLOLOL/kernel-experience-tools"

[project.classifiers]
Programming Language :: Python = "3"
Programming Language :: Python :: 3.7
Programming Language :: Python :: 3.8
Programming Language :: Python :: 3.9
Programming Language :: Python :: 3.10
Programming Language :: Python :: 3.11
Programming Language :: Python :: 3.12
License :: OSI Approved :: MIT License
Operating System :: OS Independent
Intended Audience :: Science/Research
Topic :: Scientific/Engineering :: Mathematics
Topic :: Scientific/Engineering :: Physics

[tool.setuptools]
packages = {find = {where = ["src"]}}
include-package-data = true

[tool.setuptools.cmdclass]
build_ext = "pybind11.setup_helpers.build_ext"

[tool.setuptools.ext-modules]
"kernel_experience._solvers_cpp" = {sources = ["src/kernel_experience/solvers.cpp"], include-dirs = ["numpy.get_include()"]}
