[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "pybind11>=2.6",
    "numpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "kernel-experience-tools"
version = "1.0.1"  
authors = [
    {name = "Artem Vozmishchev", email = "xbrutallololx@gmail.com"}
]
description = "Library for projecting memory kernels to experience functions"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"

dependencies = [
    "numpy",
    "scipy>=1.6.0",
    "matplotlib>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/BRUTALLOLOL/kernel-experience-tools"
